# gateway

./: Dockerfile  Dockerfile.inf  Dockerfile.llamacpp  Dockerfile.stt  LICENSE  README.dev.md  README.md  config.example.yaml  docker-bake.hcl  docker-compose.yaml  pyproject.toml  run.dev.sh  start_notebook.sh  supervisord.conf  supervisord.inf.conf
.github/workflows/: check.yaml
assets/mock/: mock_stt.flac
compose/: docker-compose.dev.yaml  docker-compose.llamacpp.ui.yaml  docker-compose.llamacpp.yaml
notebooks/: check_audio.ipynb
proto/: greeter.proto  sst_transcribe.proto  stt.proto  tts.proto  tts_audio.proto
scripts/: gen_proto.py
src/api/: __init__.py  aclient.py  client.py  pyproject.toml  utils.py
src/core/: app.py  globals.py  logger.py  main.py
src/core/abstract/: __init__.py
src/core/pipelines/: chat_synthesized.py
src/core/routers/: router_models.py  schemas.py  utils.py
src/core/routers/oai/: models.py  router_audio.py  router_chat_completions.py  router_models.py  router_realtime.py  router_transcriptions.py  schemas.py  sentence_collector.py  stream_utils.py  utils.py
src/core/status/: models.py  worker.py
src/core/workers/: w_status.py
src/hf/: download.py  pyproject.toml
src/inf_llm/: pyproject.toml
src/inf_llm/llamacpp/: globals.py  main.py
src/llm/: client.py  pyproject.toml  status.py
src/llm/inference/: llamacpp.py
src/llm/models/: __init__.py  engine_params.py  model_config.py  model_record.py  models.py  prompts.py  records.py  urls.py
src/models/: config.py  definitions.py  pyproject.toml  read_config.py  status.py  urls.py  utils.py
src/models/s1_records/: __init__.py  engine_params.py  model_record.py  records.py  urls.py
src/models/s2_from_config/: __init__.py  config.py  model_config.py
src/models/s3_models/: models.py  status.py
src/stt/: client.py  globals.py  pyproject.toml  status.py
src/stt/inference/: ffmpeg.py  ffmpeg_utils.py  grpc_app.py  main.py  schemas.py  stream_utils.py  streaming_parakeet.py
src/stt/inference/grpc/: proto_service_transcriptions.py  server.py
src/stt/inference/rest/: app.py  router_transcriptions.py
src/stt/models/: __init__.py  model_config.py  model_record.py  models.py  records.py  urls.py
src/tts/: client.py  globals.py  pyproject.toml  status.py
src/tts/inference/: app.py  encode_audio_stream.py  ffmpeg.py  main.py  pipeline.py  router_audio.py  schemas.py  stream_utils.py  streaming_kokoro.py  utils.py
src/tts/inference/grpc/: proto_service_audio.py  server.py
src/tts/inference/rest/: app.py  router_audio.py
src/tts/models/: __init__.py  model_config.py  model_record.py  models.py  records.py  urls.py
