[project]
name = "gateway"
version = "0.2.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
core = [
    "aiohttp>=3.13.2",
    "fastapi>=0.121.3",
    "huggingface-hub<=1",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.3",
    "scalar-fastapi>=1.4.4",
    "termcolor>=3.2.0",
    "tokenizers>=0.22.1",
    "transformers>=4.57.3",
    "safetensors>=0.7.0",
    "uvicorn>=0.38.0",
    "uvloop>=0.22.1",
    "ujson>=5.11.0",
]

inf_llamacpp = [
    "gateway[core]",
]

[dependency-groups]
dev = [
    "gateway[core]",
    "ruff>=0.14.6",
    "pytest>=9.0.1",
    "pyright>=1.1.407",
]

[tool.uv.workspace]
members = [
    "src/core",
    "src/models",
    "src/inf_llm",
    "src/hf",
    "src/llm",
    "src/tts",
]

[tool.uv.sources]
core = { workspace = true }
models = { workspace = true }
inf_llm = { workspace = true }
hf = { workspace = true }
llm = { workspace = true }
tts = { workspace = true }

[tool.uv]
package = true

[project.scripts]
serve = "core.main:main"
inf_llamacpp = "inf_llm.llamacpp.main:main"

[tool.pytest.ini_options]
markers = []
testpaths = ["tests", "src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
]
asyncio_mode = "auto"
